--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2018"
 
 [dependencies]
 empty-box = "~0.1"
+
+[dev-dependencies]
+criterion = "~0.3"
+
+[[bench]]
+name = "benchmark"
+harness = false
